# BeamEquation

./: .gitignore  BeamEquation.sln  README.md
Beam.Cpp/: CMakeLists.txt  README.md  main.cpp
Beam.Cpp/doc/: Doxyfile  beam_pinn_documentation.md
Beam.Cpp/doc/doxygen/docbook/: _beam_8h.xml  _beam_8h_source.xml  _c_make_c_compiler_id_8c.xml  _c_make_c_compiler_id_8c_source.xml  _c_make_c_x_x_compiler_id_8cpp.xml  _c_make_c_x_x_compiler_id_8cpp_source.xml  _global_8h.xml  _global_8h_source.xml  _timer_8h.xml  _timer_8h_source.xml  annotated.xml  beam__pinn__documentation_8md.xml  class_beam_1_1_p_i_n_n.xml  class_helper_1_1_timer.xml  dir_332c553fc49b1a13451acb19cc9e7bba.xml  dir_4fef79e7177ba769987a8da36c892c5f.xml  dir_63772b626f2709090f0bdca0f40827b4.xml  dir_81fb1a567d73939244c1d33ec26e77c4.xml  dir_d3b9d5c61c8bddf83c18df8b6f82c524.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml  main_8cpp.xml  main_8cpp_source.xml  md_beam__pinn__documentation.xml  namespace_beam.xml  namespace_global.xml  namespace_helper.xml  struct_beam_1_1_losses.xml
Beam.Cpp/doc/doxygen/html/: _beam_8h.html  _beam_8h.js  _beam_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _global_8h.html  _global_8h.js  _global_8h_source.html  _timer_8h.html  _timer_8h.js  _timer_8h_source.html  annotated.html  annotated_dup.js  beam__pinn__documentation_8md.html  class_beam_1_1_p_i_n_n-members.html  class_beam_1_1_p_i_n_n.html  class_beam_1_1_p_i_n_n.js  class_helper_1_1_timer-members.html  class_helper_1_1_timer.html  class_helper_1_1_timer.js  classes.html  dir_332c553fc49b1a13451acb19cc9e7bba.html  dir_332c553fc49b1a13451acb19cc9e7bba.js  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4.js  dir_81fb1a567d73939244c1d33ec26e77c4.html  dir_81fb1a567d73939244c1d33ec26e77c4.js  dir_d3b9d5c61c8bddf83c18df8b6f82c524.html  dir_d3b9d5c61c8bddf83c18df8b6f82c524.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  functions_vars.html  (+27 more)
Beam.Cpp/include/: Beam.h  Losses.h  Pinn.h
BeamTest.Cpp/: CMakeLists.txt  test_beam.cpp
BeamTest.Cpp/include/: Beam.h
(+128 files in other folders)
